changed code such that https/ssl is optional.